cmake_minimum_required(VERSION 3.2)
project(SFMLDemo)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES main.cpp Scenes/Scene1.cpp Scenes/Scene1.h MainGame.h Scenes/sharedScenes.h Scenes/shareScenes.cpp Scenes/Scene2.h Scenes/Scene2.cpp Scenes/Scene3.cpp Scenes/Scene3.h Scenes/Scene4.cpp Scenes/Scene4.h Menus/Menu.cpp Menus/Menu.h Menus/Credits.cpp Menus/Credits.h)
add_executable(SFMLDemo ${SOURCE_FILES})

set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake_modules")
find_package(SFML REQUIRED system window graphics network audio)
if (SFML_FOUND)
    include_directories(${SFML_INCLUDE_DIR})
    target_link_libraries(SFMLDemo ${SFML_LIBRARIES})
endif()
file(COPY "Images/Cutscenes/Fonts/eutemia-i.italic.ttf" DESTINATION "${CMAKE_BINARY_DIR}")
file(COPY "Images/Cutscenes/Fonts/made-in-china.regular.ttf" DESTINATION "${CMAKE_BINARY_DIR}")
file(COPY "Images/Cutscenes/Fonts/HomePlanetBB-Bold.ttf" DESTINATION "${CMAKE_BINARY_DIR}")
file(COPY "Menus/Fonts/advanced_pixel_lcd-7.ttf" DESTINATION "${CMAKE_BINARY_DIR}")
file(COPY "Menus/Fonts/OpenSans-Bold.ttf" DESTINATION "${CMAKE_BINARY_DIR}")
file(COPY "Menus/Images/lonely blade IV.jpg" DESTINATION "${CMAKE_BINARY_DIR}")
file(COPY "Images/Cutscenes/Fonts/Beholder.ttf" DESTINATION "${CMAKE_BINARY_DIR}")
file(COPY "Images/Cutscenes/Background/forest.jpeg" DESTINATION "${CMAKE_BINARY_DIR}")
file(COPY "Images/Cutscenes/Sprites/bartender.png" DESTINATION "${CMAKE_BINARY_DIR}")
file(COPY "Images/Cutscenes/Sprites/brother.png" DESTINATION "${CMAKE_BINARY_DIR}")
file(COPY "Images/Cutscenes/Sprites/brother.png" DESTINATION "${CMAKE_BINARY_DIR}")
file(COPY "Images/Cutscenes/Background/textbackground.jpg" DESTINATION "${CMAKE_BINARY_DIR}")
file(COPY "Images/Cutscenes/Sprites/BlackCoat.png" DESTINATION "${CMAKE_BINARY_DIR}")
file(COPY "Images/Cutscenes/Sprites/Ryoma_Damaged.png" DESTINATION "${CMAKE_BINARY_DIR}")
file(COPY "Images/Cutscenes/Sprites/niles.png" DESTINATION "${CMAKE_BINARY_DIR}")
file(COPY "Images/Cutscenes/Sprites/barStranger.png" DESTINATION "${CMAKE_BINARY_DIR}")
file(COPY "Images/Cutscenes/Sprites/islandMan.png" DESTINATION "${CMAKE_BINARY_DIR}")
file(COPY "Images/Cutscenes/Sprites/samurai.png" DESTINATION "${CMAKE_BINARY_DIR}")
file(COPY "Images/Cutscenes/Background/deathForest.jpg" DESTINATION "${CMAKE_BINARY_DIR}")
file(COPY "Images/Cutscenes/Background/mop.png" DESTINATION "${CMAKE_BINARY_DIR}")
file(COPY "Images/Cutscenes/Background/bleach.jpeg" DESTINATION "${CMAKE_BINARY_DIR}")
file(COPY "Images/Cutscenes/Background/town.jpg" DESTINATION "${CMAKE_BINARY_DIR}")
file(COPY "Images/Cutscenes/Background/town_side.png" DESTINATION "${CMAKE_BINARY_DIR}")
file(COPY "Images/Cutscenes/Background/outsideBar.jpg" DESTINATION "${CMAKE_BINARY_DIR}")
file(COPY "Images/Cutscenes/Background/bar.png" DESTINATION "${CMAKE_BINARY_DIR}")
file(COPY "Images/Cutscenes/Background/island.png" DESTINATION "${CMAKE_BINARY_DIR}")
file(COPY "Images/Cutscenes/Background/TakumiDeath.png" DESTINATION "${CMAKE_BINARY_DIR}")
file(COPY "Images/Cutscenes/Background/openeyes1.png" DESTINATION "${CMAKE_BINARY_DIR}")

file(COPY "AudioFiles/Cutscenes/birds chirping.wav" DESTINATION "${CMAKE_BINARY_DIR}")
file(COPY "AudioFiles/Cutscenes/thud1.wav" DESTINATION "${CMAKE_BINARY_DIR}")
file(COPY "AudioFiles/Cutscenes/swords clashing.wav" DESTINATION "${CMAKE_BINARY_DIR}")
file(COPY "AudioFiles/Cutscenes/crowd murmur.wav" DESTINATION "${CMAKE_BINARY_DIR}")
file(COPY "AudioFiles/Cutscenes/bar crowd.wav" DESTINATION "${CMAKE_BINARY_DIR}")
file(COPY "AudioFiles/Cutscenes/partyjoin.wav" DESTINATION "${CMAKE_BINARY_DIR}")
file(COPY "AudioFiles/Cutscenes/break in bar.wav" DESTINATION "${CMAKE_BINARY_DIR}")
file(COPY "AudioFiles/Cutscenes/ocean.wav" DESTINATION "${CMAKE_BINARY_DIR}")
file(COPY "AudioFiles/Cutscenes/drinking.wav" DESTINATION "${CMAKE_BINARY_DIR}")
file(COPY "AudioFiles/Cutscenes/knife stab.wav" DESTINATION "${CMAKE_BINARY_DIR}")
file(COPY "AudioFiles/Cutscenes/select1.wav" DESTINATION "${CMAKE_BINARY_DIR}")
file(COPY "AudioFiles/Cutscenes/mainMenu.wav" DESTINATION "${CMAKE_BINARY_DIR}")
